--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,8 @@ h4 {
 }
 h2 {
   text-transform: uppercase;
-  margin: 0 0 20px;
+  /* margin: 0 0 20px; */
+  padding: 30px 0px;
   font-weight: 800;
   font-size: 36px;
   color: #333;
@@ -149,7 +150,8 @@ hr {
   margin-bottom: 15px;
   padding-bottom: 15px;
 }
-.section-title h2::after {
+
+/* .section-title h2::after {
   position: absolute;
   content: "";
   background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
@@ -158,21 +160,21 @@ hr {
   bottom: 0;
   margin-left: -30px;
   left: 50%;
-}
+} */
 .section-title p {
   font-size: 18px;
 }
 .btn-custom {
-  font-family: "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   color: #fff;
   background-color: #5ca9fb;
   background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
   padding: 14px 34px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
   margin: 0;
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 600;
   border-radius: 25px;
   transition: all 0.5s linear;
   border: 0;
@@ -208,7 +210,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
+  background: url(../img/background.jpg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -216,7 +218,7 @@ a:focus,
   -o-background-size: cover;
 }
 .intro .overlay {
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.6);
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
@@ -232,6 +234,7 @@ a:focus,
   color: #5ca9fb;
 }
 .intro p {
+  font-family: "Roboto", sans-serif;
   color: #fff;
   font-size: 22px;
   font-weight: 300;
@@ -296,6 +299,7 @@ header .intro-text {
   font-weight: 300;
   padding-right: 8px;
 }
+
 #about img {
   width: 520px;
   margin-top: 10px;
@@ -307,6 +311,14 @@ header .intro-text {
   line-height: 24px;
   margin: 30px 0;
 }
+
+#about .phone {
+  line-height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #5ca9fb;
+}
+
 /* Services Section */
 #services {
   padding: 100px 0;
@@ -319,6 +331,7 @@ header .intro-text {
 #services h2 {
   color: #fff;
 }
+
 #services .section-title h2::after {
   position: absolute;
   content: "";
@@ -326,9 +339,22 @@ header .intro-text {
   height: 4px;
   width: 60px;
   bottom: 0;
-  margin-left: -30px;
-  left: 50%;
+  left: 0;
 }
+
+#services .container li:before {
+  content: "\f00c";
+  font-family: "FontAwesome";
+  color: #92e02c;
+  font-size: 11px;
+  font-weight: 300;
+  padding-right: 8px;
+}
+
+#services .container li {
+ font-size: 18px;
+}
+
 #services i.fa {
   font-size: 42px;
   width: 120px;
@@ -350,113 +376,8 @@ header .intro-text {
 #services .service-desc {
   margin-bottom: 40px;
 }
-/* Portfolio Section */
-#portfolio {
-  padding: 100px 0;
-}
-.portfolio-item {
-  margin: 1px -15px 0 -14px;
-  padding: 0;
-}
-.portfolio-item .hover-bg {
-  overflow: hidden;
-  position: relative;
-  margin: 0;
-}
-.hover-bg .hover-text {
-  position: absolute;
-  text-align: center;
-  margin: 0 auto;
-  color: #fff;
-  background: linear-gradient(
-    to right,
-    rgba(99, 114, 255, 0.8) 0%,
-    rgba(92, 169, 251, 0.8) 100%
-  );
-  padding: 30% 0 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: all 0.5s;
-}
-.hover-bg .hover-text > h4 {
-  opacity: 0;
-  color: #fff;
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  transition: all 0.3s;
-  font-size: 18px;
-  letter-spacing: 1px;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-.hover-bg:hover .hover-text > h4 {
-  opacity: 1;
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-}
-.hover-bg:hover .hover-text {
-  opacity: 1;
-}
-/* Testimonials Section */
-#testimonials {
-  padding: 100px 0;
-  background: #f6f6f6;
-}
-#testimonials i {
-  color: #e6e6e6;
-  font-size: 32px;
-  margin-bottom: 20px;
-}
-.testimonial {
-  position: relative;
-  padding: 20px;
-}
-.testimonial-image {
-  float: left;
-  margin-right: 15px;
-}
-.testimonial-image,
-.testimonial-image img {
-  display: block;
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-}
-.testimonial-content {
-  position: relative;
-  overflow: hidden;
-}
-.testimonial-content p {
-  margin-bottom: 0;
-  font-size: 14px;
-  font-style: italic;
-}
-.testimonial-meta {
-  margin-top: 10px;
-  font-size: 15px;
-  font-weight: 600;
-  color: #666;
-}
-/* Team Section */
-#team {
-  padding: 100px 0;
-}
-#team h4 {
-  margin: 5px 0;
-}
-#team .team-img {
-  width: 240px;
-}
-#team .thumbnail {
-  background: transparent;
-  border: 0;
-}
-#team .thumbnail .caption {
-  padding: 10px 0 0;
-  color: #888;
-}
+
+
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
@@ -469,6 +390,15 @@ header .intro-text {
 #contact .section-title p {
   font-size: 16px;
 }
+
+#contact .section-title .phone-number {
+  font-size: 18px;
+}
+
+#contact .section-title .contact-me {
+  font-size: 18px;
+}
+
 #contact h2 {
   color: #fff;
   margin-top: 10px;
@@ -482,7 +412,7 @@ header .intro-text {
   height: 4px;
   width: 60px;
   bottom: 0;
-  left: 30px;
+  left: 0;
 }
 #contact h3 {
   color: #fff;
