--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,11 @@ hr {
   margin-bottom: 20px;
   border: 0;
 }
+#wrapper {
+  width: fit-content;
+  min-width: 100%;
+}
+
 /* Navigation */
 #menu {
   padding: 15px;
@@ -151,16 +156,6 @@ hr {
   padding-bottom: 15px;
 }
 
-/* .section-title h2::after {
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  margin-left: -30px;
-  left: 50%;
-} */
 .section-title p {
   font-size: 18px;
 }
@@ -265,8 +260,16 @@ header .intro-text {
 }
 /* About Section */
 #about {
-  padding: 100px 0;
+  padding: 30px 0;
+
 }
+
+@media (min-width: 768px) {
+  #about {
+    padding: 100px 0;
+  }
+}
+
 #about h3 {
   font-size: 22px;
   margin: 0 0 20px;
@@ -384,6 +387,13 @@ header .intro-text {
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   color: rgba(255, 255, 255, 0.75);
 }
+
+@media (min-width: 768px) {
+  #contact {
+    padding: 30px 0;
+  }
+}
+
 #contact .section-title {
   margin-bottom: 40px;
 }
